Fix editor overflow thing

--- a/packages/brim/src/Editor.css
+++ b/packages/brim/src/Editor.css
@@ -4,6 +4,7 @@
   background: #333;
   color: #eee;
   padding: 1em;
+  overflow: hidden;
 }
 
 .Editor:focus {
